--- a/configs/ltx.yaml
+++ b/configs/ltx.yaml
@@ -1,7 +1,7 @@
 model_name: "ltx_lora"
 id_token: "freeze time, camera orbit left,"
-data_root: "/media/eisneim/4T/ltx_data"
-precomputed_datasets:
+data_root: "/media/eisneim/4T/ltx_data" # one type of resolution and num_frames; if you set precomputed_datasets this line will be ignored
+precomputed_datasets: # a list of folder contain defferient resolutions and frames
   - "/media/eisneim/4T/ltx_data_49_blured"
   - "/media/eisneim/4T/ltx_data_121_blured"
   - "/media/eisneim/4T/ltx_data_65_blured"
@@ -9,24 +9,25 @@ precomputed_datasets:
 
 
 output_dir: "/home/eisneim/www/ml/_video_gen/ltx_training/data_256/mixed"
-# output_dir: "/home/eisneim/www/ml/_video_gen/ltx_training/data/mixed"
 caption_dropout_p: 0.06
 caption_dropout_technique: "zero" # zero, phrase
 dataloader_num_workers: 4
-# pretrained_model_name_or_path: "./data/fused"
 pretrained_model_name_or_path: "a-r-r-o-w/LTX-Video-0.9.1-diffusers"
-# prev_checkpoint: "/home/eisneim/www/ml/_video_gen/ltx_training/data/mixed/prev"
+
+# if you want to resume from prev checkpoint
+# prev_checkpoint: "/home/eisneim/www/ml/_video_gen/ltx_training/data/mixed/checkpoint-2000"
 
 flow_resolution_shifting: True
 seed: 7136
+
 # mixed_precision: "no"
 # batch_size: 4
+
 mixed_precision: bf16
 batch_size: 6
-# train_steps: 3000
 train_epochs: 200
 
-# ----------- lora or full ---
+
 is_i2v: True
 noise_to_first_frame: 0.2
 train_type: "lora"
@@ -57,7 +58,7 @@ max_grad_norm: 1.0
 
 validation_prompts: ""
 num_validation_videos: 1
-validation_steps: 100000000000000000
+validation_steps: 100000000000000000 # don't do validation
 
 tracker_name: ltx_trainer
 nccl_timeout: 1800
