--- a/configs/ltx_audio.yaml
+++ b/configs/ltx_audio.yaml
@@ -4,7 +4,7 @@ data_root: "/mnt/ssd0/saksham/i2av/ltx_lora_training_i2v_t2v/cache_audio_256x512
 precomputed_datasets: # a list of folder contain defferient resolutions and frames
   - "/mnt/ssd0/saksham/i2av/ltx_lora_training_i2v_t2v/cache_audio_256x512" # TODO
 
-output_dir: "/mnt/ssd0/saksham/i2av/ltx_lora_training_i2v_t2v/only_audio"
+output_dir: "/mnt/ssd0/saksham/i2av/ltx_lora_training_i2v_t2v/only_audio_1000"
 caption_dropout_p: 0.06
 caption_dropout_technique: "zero" # zero, phrase
 dataloader_num_workers: 4
@@ -23,8 +23,8 @@ spec_time_bins: 512
 # batch_size: 4
 
 mixed_precision: bf16
-batch_size: 6
-train_epochs: 200
+batch_size: 12 #6
+train_epochs: 1000
 
 is_i2v: False
 noise_to_first_frame: 0.2
